feat: Implement two-factor authentication (2FA)
This commit introduces a two-factor authentication (2FA) system to enhance user security. Users can now enable 2FA via email or SMS.

Key additions include:

- **Backend**:
    - `EmailService` and `SmsService` to handle sending 2FA codes.
    - `UserController` and `AuthService` updated to manage 2FA logic, including generating and verifying codes.
    - `User` model extended to support 2FA configuration.
    - `pom.xml` updated with new dependencies for email and SMS services.

- **Frontend**:
    - `register.component.ts` and `profile.component.ts` updated to allow users to enable and configure 2FA.
    - `auth.service.ts` in the frontend updated to handle the 2FA verification process during login.
    - New services in `fotoland-frontend/src/app/shared/services/` to support 2FA functionality.